# URL_Shortener

./: .env.example  .gitignore  INSTALLATION.md  Makefile  README.md  database.sql  pyproject.toml  shortener.db
shortener/: __init__.py  app.py  db.py  normalize_url.py  validator.py
shortener/templates/: index.html  layout.html
shortener/templates/components/: header.html  nav.html
shortener_app/: crud.py  database.py  handlers_url.py  keygen.py  main.py  models.py  tests.py
shortener_app/templates/: index.html
shortener_app/templates/components/: header.html  nav.html
shortener_app/templates/urls/: urls.html
